[gd_scene load_steps=6 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.5, 15.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34, 80.5 )

[node name="Node2D" type="Node2D"]
position = Vector2( -5, 12 )
script = ExtResource( 1 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="."]

[node name="Icon" type="Sprite" parent="."]
position = Vector2( -69, 126 )
scale = Vector2( 2.4375, 0.34375 )
texture = ExtResource( 2 )
offset = Vector2( 84.9231, 32 )

[node name="Icon2" type="Sprite" parent="."]
position = Vector2( 896, 141 )
scale = Vector2( 2.25781, 2.21875 )
texture = ExtResource( 2 )
offset = Vector2( 6.64359, -11.2676 )

[node name="Button" type="Button" parent="."]
margin_left = 50.0
margin_top = 23.0
margin_right = 226.0
margin_bottom = 66.0
text = "ATIRAR"

[node name="Button2" type="Button" parent="."]
margin_left = 44.0
margin_top = 526.0
margin_right = 220.0
margin_bottom = 569.0
text = "ATIRAR"

[node name="Label" type="Label" parent="."]
margin_left = 273.0
margin_top = 21.0
margin_right = 408.0
margin_bottom = 74.0

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 224, 388 )
shape = SubResource( 2 )

[node name="Icon3" type="Sprite" parent="KinematicBody2D"]
position = Vector2( -71, 377 )
scale = Vector2( 2.4375, 0.34375 )
texture = ExtResource( 2 )
offset = Vector2( 84.9231, 32 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 792, 408 )
shape = SubResource( 1 )

[node name="Icon4" type="Sprite" parent="Area2D"]
position = Vector2( 898, 439 )
scale = Vector2( 2.56944, 2.6272 )
texture = ExtResource( 2 )
offset = Vector2( 6.64359, -11.2676 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button" to="KinematicBody2D" method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="KinematicBody2D" method="_on_Button2_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
